--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Build Project
-        run: npm run build
+        run: npm start
       - name: Upload artifact to enable deployment
         uses: actions/upload-artifact@v3
         with:
